# eval_orb_boost

./: README.md  boost_config.yaml  eval_H_orb_mnn.py  eval_H_orbbooster_mnn.py  plot_orb_mnn.py  plot_orbbooster_mnn.py  plot_overall_AUC.py
eval_dumps/homography/: orb+booster_mnn_topK_-1_[1, 3, 5].json  orb+booster_mnn_topK_100_[1, 3, 5].json  orb_mnn_topK_-1_[1, 3, 5].json  orb_mnn_topK_100_[1, 3, 5].json
eval_dumps/npy/: orb_boost_mnn_auc_i.npy  orb_boost_mnn_auc_v.npy  orb_boost_mnn_aucs.npy  orb_mnn_auc_i.npy  orb_mnn_auc_v.npy  orb_mnn_aucs.npy
models/: superglue.py  superpoint.py
orb/: CMakeLists.txt  opencv_type_casters.h  orb_extractor.cpp  plot_orb_extractor.cpp
orb/pybind11/: build_pybing11.txt
orb/src/: CMakeLists.txt  ORB_extractor.cpp  ORB_extractor.h
